Fix top navbar dropdown alignment

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -171,6 +171,9 @@ h5 {
 	span {
 		padding-left: 5px;
 	}
+
+	// Not sure why, but without this it's 35.5px which screws up alignment of the dropdowns and the border
+	height: 35px;
 }
 
 // This is so "Football GM" takes up the same space as "Basketball GM", allowing the Play dropdown to align with the menu on the left.
